# Comment-Board-BE

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
Comment_Board_BE/: asgi.py  settings.py  urls.py  wsgi.py
comments/: apps.py  file_queue.py  models.py  pagination.py  serializers.py  signals.py  urls.py  utils.py  validators.py  views.py
comments/migrations/: 0001_initial.py  0002_alter_file_file.py
